# BMG-CIPHER

./: CMakeLists.txt  README.md  main.cpp
Bamtang/: main.cpp
Cipher/: CMakeLists.txt  cipher.cpp  cipher.h
